crates/uitest/fixtures/ty_check/where_const_predicate_adt_wf.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/where_const_predicate_adt_wf.fe
---
error[8-0085]: const predicate is not satisfied
   ┌─ where_const_predicate_adt_wf.fe:27:5
   │
27 │     Bounded<4, 1> { value: 0 }
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^ const predicate evaluated to `false` here
   │
   = const predicates must be proven by an assumption or by CTFE evaluating to `true`

error[8-0085]: const predicate is not satisfied
   ┌─ where_const_predicate_adt_wf.fe:31:17
   │
31 │ fn bad_param(x: Bounded<4, 1>) {
   │                 ^^^^^^^^^^^^^ const predicate evaluated to `false` here
   │
   = const predicates must be proven by an assumption or by CTFE evaluating to `true`

error[8-0085]: const predicate is not satisfied
   ┌─ where_const_predicate_adt_wf.fe:36:5
   │
36 │     diverge()
   │     ^^^^^^^^^ const predicate evaluated to `false` here
   │
   = const predicates must be proven by an assumption or by CTFE evaluating to `true`

error[8-0085]: const predicate is not satisfied
   ┌─ where_const_predicate_adt_wf.fe:41:8
   │
41 │     x: Bounded<4, 1>
   │        ^^^^^^^^^^^^^ const predicate evaluated to `false` here
   │
   = const predicates must be proven by an assumption or by CTFE evaluating to `true`
